# Canada-U.S.-ElecTrade

./: .gitignore  BASE_24.txt  README.md  canada (1).sol:Zone.Identifier  requirements.txt  setup.cfg  setup.py  taran follow-up
config/: config.yaml
dataSources/: EmissionActivityRatioByTechnology.csv  EmissionPenaltyByYear.csv  InputActivityRatioByTechnology.csv  OperationalLifeTechnology.csv  OutputActivityRatioByTechnology.csv  P2G_FC_Costs.xlsx  ProvincialAnnualDemand.csv  ProvincialHourlyLoads.xlsx  ProvincialHourlyLoads_TimeAdjusted_AUTO_GENERATED.csv  README.md  Regionalization.csv  Regionalization.xlsx  ResidualCapacitiesByProvince.csv  SpecifiedAnnualDemand.xlsx  SpecifiedDemandProfile_AUTO_GENERATED.csv  Trade.csv  USA_Data.xlsx  USA_Demand.xlsx  USA_Trade.csv  techList_AUTO_GENERATED.csv
resources/: EmissionPenaltyByYear.csv  InputActivityRatioByTechnology.csv  OutputActivityRatioByTechnology.csv  ProvincialAnnualDemand.csv  ResidualCapacitiesByProvince.csv  USA_Data.xlsx  datapackage.json  osemosys_fast_TB.txt
results/: CBC_results.ipynb
scripts/: AvailabilityFactor.py  CBC_results.ipynb  CapacityFactor.py  CapacityToActivity.py  Costs.py  DataAnalysis_USA.ipynb  EmissionActivityRatio.py  EmissionPenalty.py  InOutActivityRatio.py  MakeSets.py  MergeCanUsaData.py  README.md  RETags.py  Regionalization.py  ReserveMargin.py  ResidualCapacity.py  SpecifiedAnnualDemand.py  SpecifiedDemandProfile.py  StorageCosts.py  StorageLife.py  TechToFromStorage.py  TotalAnnualMaxCapacity.py  UsaData.py  W_ProductionAndDemandNOTrade_24_extended.py  availability_factor.py  (+25 more)
(+201 files in other folders)
