[metadata]
name = can_usa_scripts
version = 0.0.1
author = Sina Motalebi
author_email = sina_motalebi@sfu.ca
description = Processes data for Canada USA project 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeltaE/Canada-U.S.-ElecTrade
project_urls =
    Bug Tracker = https://github.com/DeltaE/Canada-U.S.-ElecTrade/issues
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = workflow/scripts
packages = find:
python_requires = >=3.6
zip_safe = no

[options.packages.find]
where = workflow/scripts
